--- a/linux/utils/config_repos.yml
+++ b/linux/utils/config_repos.yml
@@ -22,9 +22,9 @@
   include_tasks: enable_disable_repos.yml
   vars:
     repo_state: "disabled"
-  when: >-
-    guest_os_ansible_distribution in ['RedHat', 'ProLinux'] or
-    guest_os_family == 'Suse'
+  when:
+    - in_desktop_hypervisor_testing == false
+    - guest_os_ansible_distribution in ['RedHat', 'ProLinux'] or guest_os_family == 'Suse'
 
 # If os_installation_iso_list is set for openSUSE, AlmaLinux, Rocky, CentOS, OracleLinux, MIRACLE LINUX and etc,
 # we can configure local DVD repositories for package installation.
