add python3-rpm into suse-16
Signed-off-by: Linhua Li <linhua.li@broadcom.com>

--- a/desktop_hypervisor/linux/open_vm_tools/ovt_verify_pkg_install.yml
+++ b/desktop_hypervisor/linux/open_vm_tools/ovt_verify_pkg_install.yml
@@ -63,7 +63,7 @@
             - dh_update_vmtools
             - dh_guest_id is not match('.*centos7.*')
             - dh_guest_id is not match('.*rhel7.*')
-            - dh_guest_id is not match('.*opensuse.*')
+            #- dh_guest_id is not match('.*opensuse.*')
           ansible.builtin.set_fact:
             uninstall_tools: true
 
