--- a/linux/utils/config_repos.yml
+++ b/linux/utils/config_repos.yml
@@ -26,6 +26,15 @@
     guest_os_ansible_distribution in ['RedHat', 'ProLinux'] or
     guest_os_family == 'Suse'
 
+- name: "Enable the existing repository on {{ vm_guest_os_distribution }}"
+  include_tasks: enable_disable_repos.yml
+  vars:
+    repo_state: "enabled"
+  when:
+    - in_desktop_hypervisor_testing is defined and in_desktop_hypervisor_testing
+    - guest_os_family == "Suse"
+    - guest_os_ansible_distribution_major_ver | int == 16
+
 # If os_installation_iso_list is set for openSUSE, AlmaLinux, Rocky, CentOS, OracleLinux, MIRACLE LINUX and etc,
 # we can configure local DVD repositories for package installation.
 - name: "Connect CDROM and add local repositories on {{ vm_guest_os_distribution }}"
