--- a/desktop_hypervisor/common/dh_test_setup.yml
+++ b/desktop_hypervisor/common/dh_test_setup.yml
@@ -255,7 +255,7 @@
       include_tasks: ../../linux/utils/get_linux_system_info.yml
       vars:
         vm_guest_ip: "{{ dh_vm_guest_ip }}"
-    - name: "Install python3-rpm in suse 16"
+    - name: "Install python3-rpm in suse"
       include_tasks: ../../linux/utils/install_uninstall_package.yml
       vars:
         package_list: [ "python3*-rpm" ]
@@ -263,7 +263,7 @@
         vm_guest_ip: "{{ dh_vm_guest_ip }}"
       when:
         - guest_os_family == "Suse"
-        - guest_os_ansible_distribution_major_ver | int == 16
+        - guest_os_ansible_distribution_major_ver | int >= 15
     - name: "Get VMware Tools version and build"
       include_tasks: ../../linux/utils/get_guest_ovt_version_build.yml
       vars:
