--- a/linux/utils/config_repos.yml
+++ b/linux/utils/config_repos.yml
@@ -27,28 +27,13 @@
     guest_os_family == 'Suse'
 
 - name: "Enable the existing repository on {{ vm_guest_os_distribution }}"
+  include_tasks: enable_disable_repos.yml
+  vars:
+    repo_state: "enabled"
   when:
     - in_desktop_hypervisor_testing is defined and in_desktop_hypervisor_testing
     - guest_os_family == "Suse"
-    - guest_os_ansible_distribution_major_ver | int >= 15
-  block:
-    - name: "Get local CD/DVD repository aliases"
-      ansible.builtin.raw: |
-        zypper lr -d | grep -E "cd:/|dvd:/" | grep -vE "non-oss|update" | cut -d'|' -f2
-      delegate_to: "{{ dh_vm_guest_ip }}"
-      register: zypper_local_repos
-      changed_when: false
-      failed_when: false
-    - name: "Set facts about guest OS local repositories"
-      ansible.builtin.set_fact:
-        guest_local_repo_ids: "{{ zypper_local_repos.stdout_lines | map('trim') | select('ne', '') | list }}"
-    - name: "Enable local repositories on {{ vm_guest_os_distribution }}"
-      include_tasks: enable_disable_repos.yml
-      vars:
-        repo_ids: "{{ guest_local_repo_ids }}"
-        repo_state: "enabled"
-        repo_state_ignore_errors: true
-      when: guest_local_repo_ids | length > 0
+    - guest_os_ansible_distribution_major_ver | int == 16
 
 # If os_installation_iso_list is set for openSUSE, AlmaLinux, Rocky, CentOS, OracleLinux, MIRACLE LINUX and etc,
 # we can configure local DVD repositories for package installation.
@@ -59,7 +44,6 @@
     - guest_os_ansible_distribution != "Fedora"
     - os_installation_iso_list is defined
     - os_installation_iso_list | length > 0
-    - in_desktop_hypervisor_testing is undefined or not in_desktop_hypervisor_testing
 
 # For OS which has official online repositories without subscription, like openSUSE, AlmaLinux, Rocky,
 # CentOS, OracleLinux, MIRACLE LINUX and etc, we can also configure their official online repositories.
